--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,13 +7,13 @@ page-home {
     }
 
     .bg{
-        background: linear-gradient(to bottom, #8d9094,#2e2f31);
+        background: linear-gradient(to bottom, #abb0b6,#2f2f31);
         align-items: center;
         text-align: center;
     }
 
     .container{
-        margin-top: 100px;
+        // margin-top: 100px;
     }
      .item{
         background-color: transparent;
@@ -36,6 +36,7 @@ page-home {
     .btnSignUp{
         color: white;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        background-color: rgba(0,0,0,0)
 
     }
 
@@ -49,6 +50,15 @@ page-home {
         margin-top: 25px;
         padding:1px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    }
+    .line{
+        position: fixed;
+        left:10%;
+        bottom: -10%;
+        width: 80%;
+        border-bottom: solid 1px rgba(247, 247, 247, 0.363);
+   
+     
     }
   
 }
